--- a/index.html
+++ b/index.html
@@ -25,112 +25,112 @@
                 </h2>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n1m" type="button" class="btn btn-secondary btn-block">- 1</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n1">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n1">0</span><span> x 1 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n1p" type="button" class="btn btn-success btn-block">+ 1</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n2m" type="button" class="btn btn-secondary btn-block">- 2</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n2">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n2">0</span><span> x 2 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n2p" type="button" class="btn btn-success btn-block">+ 2</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n3m" type="button" class="btn btn-secondary btn-block">- 3</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n3">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n3">0</span><span> x 3 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n3p" type="button" class="btn btn-success btn-block">+ 3</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n4m" type="button" class="btn btn-secondary btn-block">- 4</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n4">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n4">0</span><span> x 4 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n4p" type="button" class="btn btn-success btn-block">+ 4</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n5m" type="button" class="btn btn-secondary btn-block">- 5</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n5">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n5">0</span><span> x 5 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n5p" type="button" class="btn btn-success btn-block">+ 5</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n6m" type="button" class="btn btn-secondary btn-block">- 6</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n6">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n6">0</span><span> x 6 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n6p" type="button" class="btn btn-success btn-block">+ 6</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n7m" type="button" class="btn btn-secondary btn-block">- 7</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n7">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n7">0</span><span> x 7 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n7p" type="button" class="btn btn-success btn-block">+ 7</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n8m" type="button" class="btn btn-secondary btn-block">- 8</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n8">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n8">0</span><span> x 8 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n8p" type="button" class="btn btn-success btn-block">+ 8</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n9m" type="button" class="btn btn-secondary btn-block">- 9</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n9">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n9">0</span><span> x 9 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n9p" type="button" class="btn btn-success btn-block">+ 9</button>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n10m" type="button" class="btn btn-secondary btn-block">- 10</button>
                 </div>
-                <div class="col-md-8 col-4">
-                    <button type="button" class="btn btn-light btn-block" id="n10">0</button>
+                <div class="col-md-8 col-6">
+                    <button type="button" class="btn btn-light btn-block"><span id="n10">0</span><span> x 10 Punkt(e)</span></button>
                 </div>
-                <div class="col-md-2 col-4">
+                <div class="col-md-2 col-3">
                     <button id="n10p" type="button" class="btn btn-success btn-block">+ 10</button>
                 </div>
             </div>
