--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         margin-bottom: 12px;
       }
     </style>
+    <script>
+      document.addEventListener(
+        "touchmove",
+        (event) => event.scale !== 1 && event.preventDefault(),
+        { passive: false }
+      );
+    </script>
   </head>
 
   <body>
