--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       .row {
         margin-bottom: 12px;
       }
+      input[type="button"]{ touch-action: manipulation; }
     </style>
     <script>
       document.addEventListener(
