--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 			}
 		</style>
 		<script>
-			document.addEventListener(
-				'touchmove',
-				(event) => event.scale !== 1 && event.preventDefault(),
-				{ passive: false }
-			)
+			document.addEventListener('gesturestart', function (e) {
+				e.preventDefault()
+			})
 		</script>
 	</head>
 
