noch ein Versuch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<title>Average Peak Indicator</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<style>
+			body {
+				touch-action: pan-x pan-y;
+			}
 			.row {
 				margin-bottom: 12px;
 			}
